--- a/style.css
+++ b/style.css
@@ -111,46 +111,31 @@ border-radius: 5px;
 @media only screen and (max-width:688px)
 and (min-width:360px){
  
-.header{
-   width: 10%;
- 
+header{
+   width:100% ;
+   display: flex;
+   flex-direction: column;
+    }
+    .header-banner{
+        width:100%;
+
+    }
+    .container{
+
+        width:100%
     }
 
-.players{
+.player-list {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    grid-template-columns: repeat(1,1fr);
     padding-top: 36px;
+
 }
 
-
-   .footer-info{
+.footer-info{
+    width: 100%;
+   text-align: center;
+ }
    
-       flex-direction: column;
-   }
    
-   
-    }
-    /* tablet devices */
-    /* @media only screen and(min-width:688px)and (max-width:992px){
-    
-       .container{
-      width: 100%;
-      
-       }
-       
-          .x{
-      grid-template-columns: repeat(2,1fr);
-      
-       }
-      .players{
-      
-          flex-direction: column;
-      }
-      
-      
-       }
-     */
-    */
-
-
